Increased header z-index to avoid images from hovering above it.

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -26,6 +26,7 @@
 }
 
 .header {
+  z-index:10;
   background: rgba(40,41,42, 8);
   opacity:90%;
   width:100vw;
